Updated personal information in about component

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -10,7 +10,7 @@
       > e <span class="text-[#FF6D1F]">landing page</span>.
     </p>
     <p class="mb-24 fade-in">
-      Sfrutto la potenza del web per aiutare piccole aziende locali e freelance
+      Sfrutto la potenza del web per aiutare piccole realtà locali e freelance
       ad ottenere maggiore <span class="text-[#FF6D1F]">visibilità</span>.
     </p>
   </div>
@@ -24,8 +24,8 @@
       > e crescere in questo settore.
     </p>
     <p class="fade-in">
-      Sono sempre in cerca di nuovi progetti e realtà con cui collaborare,
-      quindi non esitare a contattarmi!
+      Sono sempre alla ricerca di nuovi progetti e collaborazioni, quindi non
+      esitare a contattarmi!
     </p>
   </div>
 </section>
