--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -73,7 +73,7 @@
 
     <div class="flex flex-col text-[#333333]">
       <h3 class="font-bold text-5xl mb-2">Formazione</h3>
-      <h4>Corso Web Design & Font-end development</h4>
+      <h4>Corso Web Design & Front-end development</h4>
       <p class="text-xs mb-3 italic">
         Nuova Accademia delle Belle Arti di Milano (NABA)
       </p>
@@ -103,18 +103,19 @@
     <ul>
       <li class="mb-8">
         <span class="text-[#FF6D1F] font-bold">Astro</span> come framework front-end
-        per realizzare un progetto sfruttando i superset di HTML nei componenti e
-        la logica dell'architettura a isole.
+        per realizzare un progetto che sfruttasse i superset di HTML all'interno
+        dei componenti e la logica dell'architettura a isole.
       </li>
       <li class="mb-8">
         <span class="text-[#FF6D1F] font-bold">HTML</span> e <span
           class="text-[#FF6D1F] font-bold">CSS</span
-        > (con Grid e Flexbox) per creare un design moderno e intuitivo e ottimizzare
+        > (con Grid e Flexbox) per creare un design moderno e intuitivo ed ottimizzare
         la flessibilità del layout.
       </li>
       <li class="mb-8">
-        <span class="text-[#FF6D1F] font-bold">JavaScript</span> per animare il menù,
-        creare testi reattivi e implementare uno scrolling dinamico della navbar.
+        <span class="text-[#FF6D1F] font-bold">JavaScript</span> per animare il menù
+        di navigazione, creare testi reattivi e implementare uno scrolling dinamico
+        della navbar.
       </li>
       <li class="mb-8">
         <span class="text-[#FF6D1F] font-bold">Tailwind</span> come framework CSS
@@ -124,7 +125,7 @@
         <span class="text-[#FF6D1F] font-bold">Git</span> e <span
           class="text-[#FF6D1F] font-bold">GitHub</span
         > per il versionamento del codice e la pubblicazione delle modifiche apportate
-        durante la realizzazione.
+        durante la progettazione.
       </li>
     </ul>
     <div class="flex gap-3 text-sm mt-12">
