Updated CTA buttons

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -27,6 +27,17 @@
       Sono sempre alla ricerca di nuovi progetti e collaborazioni, quindi non
       esitare a contattarmi!
     </p>
+    <div>
+      <a href="#contatti">
+        <button
+          class="border-2 border-[#FF6D1F] bg-white text-2xl text-[#FF6D1F] py-2 px-3 mt-5 rounded-3xl"
+        >
+          <div class="flex justify-center items-center gap-2">
+            Contattami ora
+          </div>
+        </button>
+      </a>
+    </div>
   </div>
 </section>
 
