--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -76,7 +76,7 @@
       <div>
         <a href="#contatti">
           <button
-            class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-2 px-3 rounded-3xl hover:bg-[#ff6d1fc8]"
+            class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-2 px-3 rounded-3xl"
           >
             <div class="flex justify-center items-center gap-2">
               Contattami
