Uptadet cta button

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -30,7 +30,7 @@
     <div>
       <a href="#contatti">
         <button
-          class="border-2 border-[#FF6D1F] bg-white text-2xl text-[#FF6D1F] py-2 px-3 mt-5 rounded-3xl"
+          class="border-2 border-[#FF6D1F] bg-white text-2xl font-bold text-[#FF6D1F] py-2 px-3 mt-20 rounded-3xl"
         >
           <div class="flex justify-center items-center gap-2">
             Contattami ora
