Fixed contact section layout

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,5 +1,7 @@
-<div class="h-[700px] grid grid-cols-12 grid-rows-2 bg-[#FF6D1F] rounded-3xl">
-  <div class="col-start-3 col-end-7 flex justify-end items-center mt-10">
+<div
+  class="h-[700px] w-svw grid grid-cols-12 grid-rows-2 bg-[#FF6D1F] rounded-3xl"
+>
+  <div class="col-start-4 col-end-6 flex justify-end items-center mt-10">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       height="250px"
@@ -10,14 +12,10 @@
       ></path></svg
     >
   </div>
-  <div
-    class="col-start-7 col-end-12 flex justify-center items-center text-end mt-10"
-  >
+  <div class="col-start-6 col-end-12 flex text-end my-10">
     <h3 class="text-6xl font-bold">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
-  <div
-    class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col justify-center text-xl"
-  >
+  <div class="col-start-2 col-end-12 flex flex-col justify-center text-3xl">
     TELEFONO
     <a
       href="tel:+393342655103"
@@ -39,8 +37,8 @@
       >
         <svg
           class="hover:scale-110"
-          width="30"
-          height="30"
+          width="50"
+          height="50"
           viewBox="0 0 613 613"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
@@ -57,8 +55,8 @@
       >
         <svg
           class="hover:scale-110"
-          width="30"
-          height="30"
+          width="50"
+          height="50"
           viewBox="0 0 654 613"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
