--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,10 @@
 <footer>
   <div class="h-30 md:h-80 grid grid-cols-12">
     <div class="col-start-2 col-end-12 flex justify-between items-end pb-8">
-      <span class="text-xl"><a href="/">logo</a></span>
-      <ul class="flex flex-row items-center gap-5 justify-center text-xl">
+      <span class="text-3xl text-center"
+        ><a href="/">simone<br /> garofalo</a></span
+      >
+      <ul class="flex flex-row items-center gap-5 justify-center text-3xl">
         <a href="#about" class="hover:underline cursor-pointer">About me</a>
         <a href="/curriculum" class="hover:underline cursor-pointer"
           >Curriculum</a
