Updated mobile layout and fiexed some responsive bugs

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,44 +1,47 @@
-<section id="about" class="h-100vsh grid grid-cols-12 grid-rows-2">
-  <div class="col-span-12 text-5xl m-5">
-    <p class="mb-16 fade-in">
+<section id="about" class="h-full grid grid-cols-12">
+  <div class="col-span-12 text-xl lg:text-5xl leading-tight mx-5">
+    <p class="mb-8 fade-in">
       Ciao &#x1F44B;&#x1F3FC;<br />
       piacere Simone!
     </p>
-    <p class="mb-8 fade-in">
+    <p class="mb-4 fade-in">
       Da circa un anno mi occupo di realizzare <span class="text-[#FF6D1F]"
         >siti web</span
       > e <span class="text-[#FF6D1F]">landing page</span>.
     </p>
-    <p class="mb-24 fade-in">
+    <p class="fade-in">
       Sfrutto la potenza del web per aiutare piccole realtà locali e freelance
       ad ottenere maggiore <span class="text-[#FF6D1F]">visibilità</span>.
     </p>
-  </div>
-  <div
-    class="col-span-12 row-start-2 flex flex-col justify-start text-5xl text-end m-5"
-  >
-    <p class="mb-16 fade-in">
-      Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
-      lavoro da dipendente per dedicarmi totalmente allo <span
-        class="text-[#FF6D1F]">sviluppo web</span
-      > e crescere in questo settore.
-    </p>
-    <p class="fade-in">
-      Sono sempre alla ricerca di nuovi progetti e collaborazioni, quindi non
-      esitare a contattarmi!
-    </p>
-    <div>
+    <div class="mt-8 text-end">
+      <p class="mb-8 fade-in">
+        Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
+        lavoro da dipendente per dedicarmi totalmente allo <span
+          class="text-[#FF6D1F]">sviluppo web</span
+        > e crescere in questo settore.
+      </p>
+      <p class="fade-in">
+        Sono sempre alla ricerca di nuovi progetti e collaborazioni, quindi non
+        esitare a contattarmi!
+      </p>
       <a href="#contatti">
-        <button
-          class="border-2 border-[#FF6D1F] bg-white text-2xl font-bold text-[#FF6D1F] py-2 px-3 mt-20 rounded-3xl"
-        >
-          <div class="flex justify-center items-center gap-2">
+        <div class="flex justify-end gap-1 mt-2 lg:mt-6">
+          <span class="text-xl lg:text-5xl font-bold text-[#FF6D1F] underline">
             Contattami ora
-          </div>
-        </button>
+          </span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="16px"
+            viewBox="0 -960 960 960"
+            width="16px"
+            fill="#FF6D1F"
+            ><path d="m216-160-56-56 464-464H360v-80h400v400h-80v-264L216-160Z"
+            ></path></svg
+          >
+        </div>
       </a>
     </div>
   </div>
-</section>
 
-<script src="/src/scripts/animation-about.js"></script>
+  <script src="/src/scripts/animation-about.js"></script>
+</section>
