--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -1,4 +1,4 @@
-<div class="h-14 grid grid-cols-12 my-5">
+<div class="h-14 grid grid-cols-12 my-6">
   <div class="col-start-2 col-end-12">
     <a href="/">
       <svg
@@ -14,10 +14,10 @@
   </div>
 </div>
 
-<div class="h-[200px] grid grid-cols-12 text-8xl">
-  <div class="col-start-2 col-end-12 text-[#333333] mt-5">
+<div class="h-full grid grid-cols-12 text-4xl lg:text-7xl">
+  <div class="col-start-2 col-end-12">
     <h1 class="font-bold">Curriculum</h1>
-    <p class="overflow-hidden text-3xl">
+    <p class="overflow-hidden text-[0.55rem] lg:text-3xl">
       Sono un <span class="text dinamic-text-content"
         >Web designer & Front-end developer</span
       >
@@ -25,79 +25,84 @@
   </div>
 </div>
 
-<div class="h-[50vsh] grid grid-cols-12">
-  <div class="col-start-2 col-end-6 mt-5 mb-52">
-    <h3 class="font-bold text-5xl text-[#333333] mb-6">Skills</h3>
-    <div class="h-32 w-[450px] flex flex-wrap gap-x-5 gap-y-8 mb-16">
+<div class="h-[50vsh] grid grid-cols-12 mb-12">
+  <div class="col-start-2 col-end-12 lg:col-start-2 lg:col-end-6 mt-8">
+    <h3 class="font-bold text-3xl mb-4">Skills</h3>
+    <div class="flex flex-wrap text-sm gap-x-1 gap-y-4">
       <div>
-        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">HTML</span>
+        <span class="py-1 px-2 bg-[#FF6D1F] text-white rounded-full">HTML</span>
       </div>
       <div>
-        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">CSS</span>
+        <span class="py-1 px-2 bg-[#FF6D1F] text-white rounded-full">CSS</span>
       </div>
       <div>
-        <span class="py-2 px-4 border-2 border-black rounded-full"
+        <span class="py-1 px-2 border-2 border-black rounded-full"
           >JavaScript</span
         >
       </div>
       <div>
-        <span class="py-2 px-4 border-2 border-black rounded-full">PHP</span>
+        <span class="py-1 px-2 border-2 border-black rounded-full">PHP</span>
       </div>
       <div>
-        <span class="py-2 px-4 border-2 border-black rounded-full">MySQL</span>
+        <span class="py-1 px-2 border-2 border-black rounded-full">MySQL</span>
       </div>
       <div>
-        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">Astro</span
+        <span class="py-1 px-2 bg-[#FF6D1F] text-white rounded-full">Astro</span
         ><br />
       </div>
       <div>
-        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full"
+        <span class="py-1 px-2 bg-[#FF6D1F] text-white rounded-full"
           >Tailwind</span
         >
       </div>
       <div>
-        <span class="py-2 px-4 border-2 border-black rounded-full">GSAP</span>
+        <span class="py-1 px-2 border-2 border-black rounded-full">GSAP</span>
       </div>
       <div>
-        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full"
+        <span class="py-1 px-2 bg-[#FF6D1F] text-white rounded-full"
           >Wordpress</span
         >
       </div>
       <div>
-        <span class="py-2 px-4 border-2 border-black rounded-full">Figma</span>
+        <span class="py-1 px-2 border-2 border-black rounded-full">Figma</span>
       </div>
       <div>
-        <span class="py-2 px-4 border-2 border-black rounded-full">UX/UI</span>
+        <span class="py-1 px-2 border-2 border-black rounded-full">UX/UI</span>
       </div>
     </div>
 
-    <div class="flex flex-col text-[#333333]">
-      <h3 class="font-bold text-5xl mb-2">Formazione</h3>
-      <h4>Corso Web Design & Front-end development</h4>
+    <div class="flex flex-col mt-12">
+      <h3 class="font-bold text-3xl mb-4">Formazione</h3>
+      <h4 class="font-semibold">Corso Web Design & Front-end development</h4>
       <p class="text-xs mb-3 italic">
         Nuova Accademia delle Belle Arti di Milano (NABA)
       </p>
-      <h4>Web development bootcamp</h4>
+      <h4 class="font-semibold">Web development bootcamp</h4>
       <p class="text-xs mb-3 italic">Udemy</p>
-      <h4>Diploma in Amministrazione, finanza e marketing</h4>
-      <p class="text-xs mb-12 italic">IIS Luigi Einaudi</p>
-      <div class="flex flex-col">
-        <h3 class="font-bold text-5xl mb-2">Esperienze lavorative</h3>
-        <h4>Web designer freelance</h4>
+      <h4 class="font-semibold">
+        Diploma in Amministrazione, finanza e marketing
+      </h4>
+      <p class="text-xs italic">IIS Luigi Einaudi</p>
+
+      <div class="flex flex-col mt-12">
+        <h3 class="font-bold text-3xl mb-4">Esperienze lavorative</h3>
+        <h4 class="font-semibold">Web designer freelance</h4>
         <p class="text-xs mb-3 italic">Milano</p>
-        <h4>Customer Service Specialist</h4>
+        <h4 class="font-semibold">Customer Service Specialist</h4>
         <p class="text-xs italic">PMC Plus Srl</p>
       </div>
     </div>
   </div>
 
-  <div class="col-start-8 col-end-12 text-[#333333] my-5">
-    <h3 class="font-bold text-5xl mb-2">Ultimo progetto</h3>
+  <div
+    class="col-start-2 col-end-12 mt-12 lg:mt-8 lg:col-start-8 lg:col-end-12"
+  >
+    <h3 class="font-bold text-3xl mb-4">Ultimo progetto</h3>
     <h4 class="font-bold text-xl mb-4">Portfolio personale</h4>
     <p class="mb-8">
       La realizzazione di questo portfolio mi ha permesso di mettere alla prova
       e consolidare molte delle competenze tecniche e grafiche che ho acquisito
-      in questi ultimi due anni di lavoro.
+      in questo ultimo anno.
     </p>
     <h6 class="font-bold mb-2">Stack utilizzato:</h6>
     <ul>
@@ -128,14 +133,12 @@
         durante la progettazione.
       </li>
     </ul>
-    <div class="flex gap-3 text-sm mt-12">
+    <div class="flex gap-3 text-sm mt-8">
       <a href="/Simone Garofalo CV.pdf" download>
-        <button
-          class="border-2 border-[#333333] py-2 px-3 rounded-3xl hover:bg-[#333333] hover:text-white"
-        >
+        <button class="border-2 border-black py-2 px-3 rounded-3xl">
           <div class="flex justify-center items-center gap-2">
             Scarica CV
-            <div class="border-2 border-[#333333] bg-[#333333] rounded-full">
+            <div class="border-2 border-black bg-black rounded-full">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="12px"
