--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,12 @@
-<div id="hero" class="h-svh grid grid-cols-12">
+<section id="hero" class="h-svh grid grid-cols-12">
   <div
-    class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-9xl mt-24"
+    class="col-span-12 flex flex-col items-start justify-center gap-3 text-4xl lg:text-9xl font-bold mt-40 mx-5"
   >
     <h1>
-      SONO UN<br />WEB <span class="relative col-span-12"
+      Sono un<br />web <span class="relative col-span-12"
         ><svg
           id="Group50"
-          class="absolute right-0 -inset-4"
+          class="absolute right-0 -inset-1"
           width="15621"
           height="3569"
           viewBox="0 0 15621 3569"
@@ -46,19 +46,17 @@
               keyTimes="0; 0.5; 1"
               fill="freeze"></animate></path
           >
-        </svg>DESIGNER</span
+        </svg>designer</span
       >
-      <br />FREELANCE<br />DI MILANO
+      <br />freelance<br />di Milano
     </h1>
 
-    <div class="flex gap-5 text-2xl">
+    <div class="flex gap-1 lg:gap-3 text-xs lg:text-xl">
       <a href="/Simone Garofalo CV.pdf" download>
-        <button
-          class="border-2 border-[#333333] py-2 px-3 rounded-3xl hover:bg-[#333333] hover:text-white"
-        >
-          <div class="flex justify-center items-center gap-2">
+        <button class="border-2 border-black py-1 px-1 rounded-3xl">
+          <div class="flex justify-center items-center gap-1">
             Scarica CV
-            <div class="border-2 border-[#333333] bg-[#333333] rounded-full">
+            <div class="border-2 border-black bg-black rounded-full">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="16px"
@@ -76,9 +74,9 @@
       <div>
         <a href="#contatti">
           <button
-            class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-2 px-3 rounded-3xl"
+            class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-1 px-1 rounded-3xl"
           >
-            <div class="flex justify-center items-center gap-2">
+            <div class="flex justify-center items-center gap-1">
               Contattami
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -96,4 +94,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
