--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,15 +1,15 @@
 <header>
   <nav class="grid grid-cols-12 h-14 w-full my-10 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
-      <div id="logo" class="text-xl text-center md:text-2xl">
+      <div id="logo" class="text-sm lg:text-xl text-center">
         <a href="/">simone<br /> garofalo</a>
       </div>
       <div
         id="menu-toggle"
         class="flex flex-col gap-3 justify-center items-end cursor-pointer h-16 w-16"
       >
-        <span class="bg-[#333333] h-1 w-12"></span>
-        <span class="bg-[#333333] h-1 w-12"></span>
+        <span class="bg-black h-1 lg:h-2 w-10 lg:w-16"></span>
+        <span class="bg-black h-1 lg:h-2 w-10 lg:w-16"></span>
       </div>
     </div>
   </nav>
@@ -24,31 +24,31 @@
       >
         <div id="menu-close" class="cursor-pointer h-16 w-16">
           <span
-            class="bg-white h-1 w-12 absolute transform rotate-45 top-1/2 right-0 -translate-y-1/2"
+            class="bg-white h-1 lg:h-2 w-10 lg:w-16 absolute transform rotate-45 top-1/2 right-0 -translate-y-1/2"
           ></span>
           <span
-            class="bg-white h-1 w-12 absolute transform -rotate-45 top-1/2 right-0 -translate-y-1/2"
+            class="bg-white h-1 lg:h-2 w-10 lg:w-16 absolute transform -rotate-45 top-1/2 right-0 -translate-y-1/2"
           ></span>
         </div>
       </div>
 
-      <ul class="text-7xl justify-end text-right py-5">
-        <li class="pb-3">
+      <ul class="text-2xl lg:text-7xl justify-end text-right py-5">
+        <li class="pb-">
           <a href="#hero" class="hover:underline cursor-pointer">Home</a>
         </li>
-        <li class="pb-3">
+        <li class="pb-">
           <a href="/curriculum" class="hover:underline cursor-pointer"
             >Curriculum</a
           >
         </li>
-        <li class="pb-3">
+        <li class="pb-">
           <a href="#about" class="hover:underline cursor-pointer">About me</a>
         </li>
-        <li class="pb-3">
+        <li class="pb-">
           <a href="#progetti" class="hover:underline cursor-pointer">Progetti</a
           >
         </li>
-        <li class="pb-3">
+        <li class="pb-">
           <a href="#contatti" class="hover:underline cursor-pointer">Contatti</a
           >
         </li>
