--- a/src/components/Project3.astro
+++ b/src/components/Project3.astro
@@ -12,14 +12,14 @@ const bgStyle = `background-image: url('${image}')`;
     class="absolute inset-0 bg-black/50 transition duration-700 group-hover:bg-black/20 rounded-xl"
   >
   </div>
-  <div class="text-center text-white absolute flex flex-col">
+  <div class="text-center text-white absolute flex flex-col gap-3">
     <a
       href="https://ice-cream-shop-project.netlify.app/"
       target="_blank"
       rel="noopener noreferrer"
     >
-      <h3 class="text-6xl md:text-7xl leading-relaxed mb-2">{title}</h3>
-      <p class="text-2xl">{description}</p>
+      <h3 class="text-2xl lg:text-6xl leading-relaxed lg:mb-2">{title}</h3>
+      <p class="text-xs lg:text-xl">{description}</p>
     </a>
   </div>
 </div>
