--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -5,29 +5,17 @@ const bgStyle = `background-image: url('${image}')`;
 
 <div
   id={id}
-  class="h-[600px] col-span-12 lg:col-span-6 lg:row-span-2 relative group flex items-center justify-center bg-cover bg-center bg-no-repeat object-cover rounded-xl cursor-pointer"
+  class="h-36 lg:h-[36rem] col-span-12 lg:col-span-6 lg:row-span-2 relative group flex items-center justify-center bg-cover bg-center bg-no-repeat object-cover rounded-xl cursor-pointer"
   style={bgStyle}
 >
   <div
     class="absolute inset-0 bg-black/50 transition duration-700 group-hover:bg-black/20 rounded-xl"
   >
   </div>
-  <div class="text-center text-white absolute flex flex-col gap-5">
+  <div class="text-center text-white absolute flex flex-col gap-3">
     <a href="https://simone-garofalo.netlify.app/" rel="noopener noreferrer">
-      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
-      <p class="text-2xl">{description}</p>
+      <h3 class="text-2xl lg:text-6xl leading-relaxed lg:mb-2">{title}</h3>
+      <p class="text-xs lg:text-xl">{description}</p>
     </a>
   </div>
 </div>
-<!-- <div class="overflow-hidden cursor-pointer">
-  <div
-    id={id}
-    class="flex items-center justify-center h-lvh w-screen bg-cover bg-center bg-no-repeat transform transition-all duration-1000 hover:scale-110"
-    style={bgStyle}
-  >
-    <div class="text-center text-white">
-      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
-      <p>{description}</p>
-    </div>
-  </div>
-</div> -->
