--- a/src/pages/curriculum.astro
+++ b/src/pages/curriculum.astro
@@ -4,10 +4,21 @@ import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
 import Cv from "../components/Cv.astro";
 
-import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Cv />
-<Contact />
-<Footer />
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <link rel="stylesheet" href="/src/styles/global.css" />
+    <title>Curriculum - Simone Garofalo</title>
+  </head>
+  <body>
+    <Cv />
+    <Footer />
+  </body>
+</html>
