Fixed some mobile bugs

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 <section id="about" class="h-full grid grid-cols-12">
-  <div class="col-span-12 text-xl lg:text-5xl leading-tight mx-5">
+  <div class="col-span-12 text-2xl lg:text-5xl leading-tight mx-5">
     <p class="mb-8 fade-in">
       Ciao &#x1F44B;&#x1F3FC;<br />
       piacere Simone!
@@ -26,7 +26,7 @@
       </p>
       <a href="#contatti">
         <div class="flex justify-end gap-1 mt-2 lg:mt-6">
-          <span class="text-xl lg:text-5xl font-bold text-[#FF6D1F] underline">
+          <span class="text-2xl lg:text-5xl font-bold text-[#FF6D1F] underline">
             Contattami ora
           </span>
           <svg
