--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
-<section id="hero" class="h-svh grid grid-cols-12">
+<section id="hero" class="h-svh w-full grid grid-cols-12">
   <div
-    class="col-span-12 flex flex-col items-start justify-center gap-3 text-4xl lg:text-9xl font-bold mt-40 mx-5"
+    class="col-span-12 flex flex-col items-start justify-center gap-3 text-6xl lg:text-9xl font-bold mt-40 mx-5"
   >
     <h1>
       Sono un<br />web <span class="relative col-span-12"
@@ -51,7 +51,7 @@
       <br />freelance<br />di Milano
     </h1>
 
-    <div class="flex gap-1 lg:gap-3 text-xs lg:text-xl">
+    <div class="flex gap-2 lg:gap-3 text-xl lg:text-xl">
       <a href="/Simone Garofalo CV.pdf" download>
         <button class="border-2 border-black py-1 px-1 rounded-3xl">
           <div class="flex justify-center items-center gap-1">
