--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -5,7 +5,7 @@ const bgStyle = `background-image: url('${image}')`;
 
 <div
   id={id}
-  class="h-36 lg:h-[36rem] col-span-12 lg:col-span-6 lg:row-span-2 relative group flex items-center justify-center bg-cover bg-center bg-no-repeat object-cover rounded-xl cursor-pointer"
+  class="col-span-12 lg:col-span-6 lg:row-span-2 relative group flex items-center justify-center bg-cover bg-center bg-no-repeat object-cover rounded-xl cursor-pointer"
   style={bgStyle}
 >
   <div
