--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,18 +26,18 @@ import Footer from "../components/Footer.astro";
     <Hero />
     <h3
       id="about"
-      class="text-3xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-40 mb-4 lg:mb-8"
+      class="text-4xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-40 mb-4 lg:mb-8"
     >
       About me
     </h3>
     <About />
     <h3
       id="progetti"
-      class="text-3xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-60 mb-4 lg:mb-8"
+      class="text-4xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-60 mb-4 lg:mb-8"
     >
       Progetti
     </h3>
-    <section class="grid grid-cols-12 grid-rows-3 gap-3 mx-5">
+    <section class="h-svh grid grid-cols-12 grid-rows-3 gap-3 mx-5">
       <Project
         id="project-1"
         image="progetto-1.png"
@@ -60,7 +60,7 @@ import Footer from "../components/Footer.astro";
 
     <h3
       id="contatti"
-      class="text-3xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-0 mb-4 lg:mb-8"
+      class="text-4xl lg:text-7xl font-bold ml-5 mt-20 lg:mt-0 mb-4 lg:mb-8"
     >
       Contatti
     </h3>
