--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,12 +3,12 @@
     <div
       class="col-start-2 col-end-12 lg:col-start-6 lg:col-end-12 flex items-center text-end"
     >
-      <h3 class="text-2xl lg:text-6xl font-bold">
+      <h3 class="text-4xl lg:text-6xl font-bold">
         CREIAMO INSIEME QUALCOSA DI UNICO
       </h3>
     </div>
     <div
-      class="col-start-2 col-end-12 flex flex-col gap-3 lg:gap-5 text-xl lg:text-5xl"
+      class="col-start-2 col-end-12 flex flex-col gap-3 lg:gap-5 text-3xl lg:text-5xl"
     >
       <a href="tel:+393342655103">
         <div
@@ -88,7 +88,7 @@
       class="col-start-2 col-end-12 flex justify-center lg:justify-end items-end pb-8"
     >
       <ul
-        class="flex flex-row items-center gap-2 lg:gap-5 justify-center text-[10px] lg:text-xl"
+        class="flex flex-row items-center gap-2 lg:gap-5 justify-center text-sm lg:text-xl"
       >
         <a href="#about" class="hover:underline cursor-pointer">About me</a>
         <a href="/curriculum" class="hover:underline cursor-pointer"
