--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <header>
   <nav class="grid grid-cols-12 h-14 w-full my-10 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
-      <div id="logo" class="text-sm lg:text-xl text-center">
+      <div id="logo" class="text-sm lg:text-xl text-center leading-none">
         <a href="/">simone<br /> garofalo</a>
       </div>
       <div
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <ul class="text-2xl lg:text-7xl justify-end text-right py-5">
+      <ul class="text-5xl lg:text-7xl justify-end text-right py-5">
         <li class="pb-">
           <a href="#hero" class="hover:underline cursor-pointer">Home</a>
         </li>
