Fixed some mobile bugs

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,7 +34,7 @@
 
       <ul class="text-5xl lg:text-7xl justify-end text-right py-5">
         <li class="pb-">
-          <a href="#hero" class="hover:underline cursor-pointer">Home</a>
+          <a href="/" class="hover:underline cursor-pointer">Home</a>
         </li>
         <li class="pb-">
           <a href="/curriculum" class="hover:underline cursor-pointer"
