--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -14,10 +14,10 @@
   </div>
 </div>
 
-<div class="h-full grid grid-cols-12 text-4xl lg:text-7xl">
+<div class="h-full grid grid-cols-12 text-5xl lg:text-7xl">
   <div class="col-start-2 col-end-12">
     <h1 class="font-bold">Curriculum</h1>
-    <p class="overflow-hidden text-[0.55rem] lg:text-3xl">
+    <p class="overflow-hidden text-xs lg:text-3xl">
       Sono un <span class="text dinamic-text-content"
         >Web designer & Front-end developer</span
       >
