--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -14,8 +14,8 @@ const bgStyle = `background-image: url('${image}')`;
   </div>
   <div class="text-center text-white absolute flex flex-col gap-3">
     <a href="https://simone-garofalo.netlify.app/" rel="noopener noreferrer">
-      <h3 class="text-2xl lg:text-6xl leading-relaxed lg:mb-2">{title}</h3>
-      <p class="text-xs lg:text-xl">{description}</p>
+      <h3 class="text-3xl lg:text-6xl leading-relaxed lg:mb-2">{title}</h3>
+      <p class="text-sm lg:text-xl">{description}</p>
     </a>
   </div>
 </div>
