--- a/src/components/Project2.astro
+++ b/src/components/Project2.astro
@@ -18,8 +18,8 @@ const bgStyle = `background-image: url('${image}')`;
       target="_blank"
       rel="noopener noreferrer"
     >
-      <h3 class="text-2xl lg:text-6xl leading-relaxed lg:mb-2">{title}</h3>
-      <p class="text-xs lg:text-xl">{description}</p>
+      <h3 class="text-3xl lg:text-6xl leading-relaxed lg:mb-2">{title}</h3>
+      <p class="text-sm lg:text-xl">{description}</p>
     </a>
   </div>
 </div>
