--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,7 +42,7 @@
           >
         </div>
       </a>
-      <div class="flex justify-between">
+      <div class="flex justify-between items-center">
         SOCIAL
         <div class="flex gap-1">
           <a
@@ -85,10 +85,10 @@
       </div>
     </div>
     <div
-      class="col-start-2 col-end-12 flex justify-center lg:justify-end items-end pb-8"
+      class="col-start-2 col-end-12 flex justify-center items-center lg:justify-end mb-6"
     >
       <ul
-        class="flex flex-row items-center gap-2 lg:gap-5 justify-center text-sm lg:text-xl"
+        class="flex flex-row items-center gap-4 lg:gap-5 justify-center text-sm lg:text-xl"
       >
         <a href="#about" class="hover:underline cursor-pointer">About me</a>
         <a href="/curriculum" class="hover:underline cursor-pointer"
