--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <header>
   <nav class="grid grid-cols-12 h-14 w-full my-10 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
-      <div id="logo" class="text-sm lg:text-xl text-center leading-none">
+      <div id="logo" class="text-base lg:text-xl text-center leading-none">
         <a href="/">simone<br /> garofalo</a>
       </div>
       <div
