Fixed CV component

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -28,7 +28,7 @@
 <div class="h-[50vsh] grid grid-cols-12 mb-12">
   <div class="col-start-2 col-end-12 lg:col-start-2 lg:col-end-6 mt-8">
     <h3 class="font-bold text-3xl mb-4">Skills</h3>
-    <div class="flex flex-wrap text-sm gap-x-1 gap-y-4">
+    <div class="flex flex-wrap text-base gap-x-1 gap-y-4">
       <div>
         <span class="py-1 px-2 bg-[#FF6D1F] text-white rounded-full">HTML</span>
       </div>
