Updated media queries for medium devices

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,14 @@
 <footer>
   <div class="h-svh w-full grid grid-cols-12 grid-rows-2 bg-[#FF6D1F]">
     <div
-      class="col-start-2 col-end-12 lg:col-start-6 lg:col-end-12 flex items-center text-end"
+      class="col-start-2 col-end-12 md:col-start-6 md:col-end-12 flex items-center text-end"
     >
-      <h3 class="text-4xl lg:text-6xl font-bold">
+      <h3 class="text-4xl md:text-6xl font-bold">
         CREIAMO INSIEME QUALCOSA DI UNICO
       </h3>
     </div>
     <div
-      class="col-start-2 col-end-12 flex flex-col gap-3 lg:gap-5 text-3xl lg:text-5xl"
+      class="col-start-2 col-end-12 flex flex-col gap-3 md:gap-5 text-3xl md:text-5xl"
     >
       <a href="tel:+393342655103">
         <div
@@ -85,10 +85,10 @@
       </div>
     </div>
     <div
-      class="col-start-2 col-end-12 flex justify-center items-center lg:justify-end mb-6"
+      class="col-start-2 col-end-12 flex justify-center items-center md:justify-end mb-6"
     >
       <ul
-        class="flex flex-row items-center gap-4 lg:gap-5 justify-center text-sm lg:text-xl"
+        class="flex flex-row items-center gap-4 md:gap-5 justify-center text-sm md:text-xl"
       >
         <a href="#about" class="hover:underline cursor-pointer">About me</a>
         <a href="/curriculum" class="hover:underline cursor-pointer"
